dts/testData/inspections/syntax/EmptyChar.dtsi
prop = <'a' <error descr="Empty char literal">''</error>>;